2015-12-21  Aakash Jain  <aakash_jain@apple.com>

        Unreviewed, add myself to the committers list.

        * Scripts/webkitpy/common/config/contributors.json:

2015-12-21  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] jquery.min.js violates DFSG
        https://bugs.webkit.org/show_bug.cgi?id=152428

        Reviewed by Joseph Pecoraro.

        Stop distributing Source/WebInspectorUI/Tools. It is not needed in tarballs. This brings us
        into compliance with DFSG by removing a bundled, minified copy of jQuery from our tarball.

        * gtk/manifest.txt.in:

2015-12-19  Dan Bernstein  <mitz@apple.com>

        [Mac] WebKit contains dead source code for OS X Mavericks and earlier
        https://bugs.webkit.org/show_bug.cgi?id=152462

        Reviewed by Alexey Proskuryakov.

        - Removed definitions of MACOSX_DEPLOYMENT_TARGET and WEBKIT_SYSTEM_INTERFACE_LIBRARY for
          OS X 10.9:

        * DumpRenderTree/mac/Configurations/DebugRelease.xcconfig:
        * LayoutTestRelay/Configurations/DebugRelease.xcconfig:
        * MiniBrowser/Configurations/DebugRelease.xcconfig:
        * TestWebKitAPI/Configurations/DebugRelease.xcconfig:
        * WebKitTestRunner/Configurations/DebugRelease.xcconfig:

        - Simplified expressions involving __MAC_OS_X_VERSION_MIN_REQUIRED and removed code that was
          never getting compiled:

        * DumpRenderTree/mac/TextInputController.m:
        * MiniBrowser/mac/BrowserWindowController.m:
        * TestWebKitAPI/Tests/mac/AttributedString.mm:
        * WebKitTestRunner/mac/EventSenderProxy.mm:

2015-12-18  Michael Catanzaro  <mcatanzaro@igalia.com>

        Unreviewed, add WebKitGTK+ Bugzilla email to committers list

        This is to make it easy to CC it on Bugzilla.

        * Scripts/webkitpy/common/config/contributors.json:

2015-12-18  Aakash Jain  <aakash_jain@apple.com>

        Pasteboard get messed up after running kill-old-processes