@@ -1,3 +1,9 @@
+2015-12-21  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed, move myself to reviewer list.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-12-21  Aakash Jain  <aakash_jain@apple.com>
 
         Unreviewed, add myself to the committers list.
